update listContent and its JS

--- a/list.html
+++ b/list.html
@@ -79,7 +79,18 @@
     </div>
 
     <div class="listContent">
-        <ul>
+        <div class="product-header">
+            <p class="product-img">商品圖片</p>
+            <p class="product-title">商品名稱</p>
+            <p class="product-qty">數量</p>
+            <p class="product-total">總計</p>
+        </div>
+        <div class="products">
+
+        </div>
+
+
+        <!-- <ul>
             <li class="listTitle">
                 <p>商品圖片</p>
                 <p>商品名稱</p>
@@ -92,7 +103,7 @@
                 <i class="far fa-trash-alt"></i>
             </li>
             
-        </ul>
+        </ul> -->
     </div>
 
     <div class="listForm">
@@ -199,6 +210,10 @@
             }
         }
     </script>
+    <script src="./cart.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 
 </html>
