--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
           </div>
           <div class="header_icon">
             <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
-            <a id="listBtn" href="#"><i class="fas fa-shopping-cart"></i></a>
+            <a id="listBtn" href="list.html"><i class="fas fa-shopping-cart"></i></a>
             <span id="listBtnQty">0</span>
           </div>
 
@@ -190,7 +190,7 @@
         <div class="ume1" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic/product-2.png"
+            src="./Product/Product pic/ume.png"
             alt="ume"
           />
           <div class="itemInnerText">
@@ -232,7 +232,7 @@
         <div class="ume2" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic/product-1 (2).png"
+            src="./Product/Product pic//sakeume.png"
             alt="sakeume"
           />
           <div class="itemInnerText">
@@ -274,7 +274,7 @@
         <div class="ume3" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic/product-7.png"
+            src="./Product/Product pic/whiskyume.png"
             alt="whiskyume"
             />
           <div class="itemInnerText">
@@ -316,7 +316,7 @@
         <div class="ume4" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic/product-6.png"
+            src="./Product/Product pic/shoume.png"
             alt="shoume"
           />
           <div class="itemInnerText">
@@ -356,7 +356,7 @@
         <div class="ume5" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic/whiskyume.png"
+            src="./Product/Product pic/awamoriume.png"
             alt="awamoriume"
           />
           <div class="itemInnerText">
