add eng title for products, amend cart.js

--- a/product.html
+++ b/product.html
@@ -149,35 +149,35 @@
         <ul class="productListInner">
           <li class="productListInnerText">
             <a href=".ume1">
-              <img src="./Product/Product pic/product-2.png" alt="" />
+              <img src="./Product/Product pic/ume.png" alt="" />
               <p class="productTitle">手工酒梅</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
             <a href=".ume2">
-              <img src="./index/index product/2.png" alt="" />
+              <img src="./Product/Product pic/sakeume.png" alt="" />
               <p class="productTitle">清酒梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
             <a href=".ume3">
-              <img src="./index/index product/3.png" alt="" />
+              <img src="./Product/Product pic/whiskyume.png" alt="" />
               <p class="productTitle">威士忌梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
             <a href=".ume4">
-              <img src="./index/index product/4.png" alt="" />
+              <img src="./Product/Product pic/shoume.png" alt="" />
               <p class="productTitle">燒灼梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
             <a href=".ume5">
-              <img src="./index/index product/5.png" alt="" />
+              <img src="./Product/Product pic/awamoriume.png" alt="" />
               <p class="productTitle">泡盛梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
@@ -194,7 +194,7 @@
             alt="ume"
           />
           <div class="itemInnerText">
-            <h3 class="itemTitle">手工醉梅</h3>
+            <h3 class="itemTitle">手工醉梅<br>Ume</h3>
             <p>
               採用100%國產青梅 ，果肉厚實，是一款美味的梅子。<br />
               將其浸泡在糖和酒精中大約需要一年時間。<br />
@@ -232,11 +232,11 @@
         <div class="ume2" id="mainProduct">
           <img
             class="itemImg"
-            src="./Product/Product pic//sakeume.png"
+            src="./Product/Product pic/sakeume.png"
             alt="sakeume"
           />
           <div class="itemInnerText">
-            <h3 class="itemTitle">清酒梅酒</h3>
+            <h3 class="itemTitle">清酒梅酒<br>Sakeume</h3>
             <p>
               以清酒為基底釀造，其酒感較其他蒸餾酒款來的輕盈，<br />
               因各地的酒米及水質各有其優點，<br />
@@ -278,7 +278,7 @@
             alt="whiskyume"
             />
           <div class="itemInnerText">
-            <h3 class="itemTitle">威士忌梅酒</h3>
+            <h3 class="itemTitle">威士忌梅酒<br>Whiskyume</h3>
             <p>
               有別於傳統梅酒，新穎的以威士忌為基底酒，<br />
               微微辛辣感的橡木桶酒香中還帶有青梅的清爽，<br />
@@ -320,7 +320,7 @@
             alt="shoume"
           />
           <div class="itemInnerText">
-            <h3 class="itemTitle">燒酌梅酒</h3>
+            <h3 class="itemTitle">燒酌梅酒<br>Shoume</h3>
             <p>
               使用嚴選神木村的青梅，並以自家釀製的米燒酒所釀製的梅屋燒酌梅酒。
             </p>
@@ -360,7 +360,7 @@
             alt="awamoriume"
           />
           <div class="itemInnerText">
-            <h3 class="itemTitle">泡盛梅酒</h3>
+            <h3 class="itemTitle">泡盛梅酒<br>Awamoriume</h3>
             <p>
               以琉球泡盛作為基底，主要強調梅子的優雅酸味。<br />
               推薦冰鎮後直接飲用，一口喝下之後，可以從後味感受到泡盛獨有的香氣，<br />
