add link to list.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="header_icon">
             <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
-            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+            <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
             <span>0</span>
           </div>
 
@@ -243,5 +243,6 @@
         }
       };
     </script>
+    <script src="./cart.js"></script>
   </body>
 </html>
